deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vshelpdesk
  labels:
    app.kubernetes.io/part-of: vs-help-desk
